<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InstantM</string>
    <string name="title_activity_tabs">InstantM</string>
    <string name="chats">Chats</string>
    <string name="contacts">Contactos</string>
    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_repeat_password">Repetir contraseña</string>
    <string name="birthday">Fecha de nacimiento</string>
    <string name="hint_name">Nombre</string>
    <string name="hint_email">E-mail</string>
    <string name="button_login">Iniciar sesión</string>
    <string name="button_register">Registrarse</string>
    <string name="create_group">Crear grupo</string>
    <string name="button_logout">Logout</string>
    <string name="button_edit_group">Editar grupo</string>
    <string name="description">Descripción</string>
    <string name="name_group">Nombre del grupo</string>
    <string name="menu_item_anadir_contacto">Añadir contacto</string>
    <string name="menu_item_logout">Cerrar sesión</string>
    <string name="menu_item_crear_grupo">Crear grupo</string>
    <string name="search_contact">Buscar contacto</string>
    <string name="add_member">Añadir integrante</string>
    <string name="btn_create_group">Crear grupo</string>
    <string name="out_group"><u>Salir del grupo</u></string>
    <string name="save">Guardar</string>
    <string name="delete_group">Borrar grupo</string>
    <string name="lb_eliminar_contacto">Eliminar contacto</string>
    <string name="edit_group">Editar grupo</string>
    <string name="new_group">Nuevo grupo</string>
    <string name="new_description">Descripción</string>
    <string name="OK">Ok</string>
    <string name="cancel">Cancelar</string>
    <string name="chat_search">Buscar chat</string>
    <string name="profile_state">Coloca aqui tu estado</string>
    <string name="profile_name">Nombre de perfil</string>
    <string name="menu_item_ver_perfil">Ver perfil</string>
    <string name="menu_item_cambiar_contrasena">Cambiar contraseña</string>
    <string name="menu_item_cambiar_email">Cambiar email</string>
    <string name="menu_item_cambiar_fecha_nacimiento">Cambiar fecha de nacimiento</string>
    <string name="editar_prefil">Editar perfil</string>
    <string name="nueva_contrasena">Nueva contraseña</string>
    <string name="reintroduce_contrasena">Reintroduce contraseña</string>

</resources>