<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/background"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="80dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:background="@drawable/iconomf" />

    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="287dp"
        android:gravity="bottom"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <EditText
            android:id="@+id/register_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_hint"
            android:textColorHint="@color/input_hint" />

        <EditText
            android:id="@+id/register_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input"
            android:hint="@string/hint_name"
            android:inputType="textCapWords"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_hint"
            android:textColorHint="@color/input_hint" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_hint"
            android:textColorHint="@color/input_hint" />

        <EditText
            android:id="@+id/register_repeat_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/input"
            android:hint="@string/hint_repeat_password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:singleLine="true"
            android:textColor="@color/input_hint"
            android:textColorHint="@color/input_hint" />
        <EditText
            android:id="@+id/birthdayDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/input"
            android:inputType="date"
            android:hint="@string/birthday"
            android:focusable="false"
            android:clickable="true"
            android:maxLines="1" />
    </LinearLayout>

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/button_register"
        android:text="@string/button_register"
        android:textColor="@color/white"
        android:textSize="20dp" />

</LinearLayout>