<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".group.EditGroupActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:label="@string/edit_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/AppTheme.PopupOverlay">

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:paddingLeft="20dp"
            android:paddingTop="10dp"
            android:text="@string/button_edit_group"
            android:textColor="#ffffff"
            android:textSize="25dp" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/ivGroupImage"
                    android:layout_width="165dp"
                    android:layout_height="160dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="40dp"
                    android:layout_marginBottom="20dp"
                    android:src="@drawable/group256" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvGroupName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:includeFontPadding="true"
                        android:text="@string/new_group"
                        android:textSize="40sp" />

                    <ImageView
                        android:id="@+id/ivEditGroupName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/edit32" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvGroupDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="5dp"
                        android:includeFontPadding="true"
                        android:text="@string/new_description"
                        android:textSize="20sp" />

                    <ImageView
                        android:id="@+id/ivEditGroupDescription"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:src="@drawable/edit32" />
                </LinearLayout>

                <ListView
                    android:id="@+id/lvMembers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp">

                </ListView>

                <TextView
                    android:id="@+id/tvLeaveGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/out_group"
                    android:textColor="@color/input_register"
                    android:textSize="20sp"
                    android:textStyle="italic" />

                <Button
                    android:id="@+id/btDeleteGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/red_button"
                    android:text="@string/delete_group"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

                <Button
                    android:id="@+id/btEditGroup"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/custom_button"
                    android:text="@string/save"
                    android:textColor="@color/white"
                    android:textSize="20dp" />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>